# Automata-Project

./: .gitignore  Cargo.toml  README.md  build_errors.txt  run_out.txt  testfile.txt
minicompiler.git/: config
minicompiler.git/objects/pack/: pack-ba01100a7ffe0168a9924528e3e65a2639e0621c.idx  pack-ba01100a7ffe0168a9924528e3e65a2639e0621c.pack  pack-ba01100a7ffe0168a9924528e3e65a2639e0621c.rev
minicompiler.git/refs/heads/: main
src/: gencode.rs  lexer.rs  main.rs  mips.rs  optimize.rs  parser.rs  symtable.rs  token.rs
test/: README.md
tests/: integration_tests.rs
tools/: test.sh  upload.sh
